changing otp to activation link
